[tool.poetry]
name = "repl_python3_MelodineRadio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
ffpyplayer = "^4.3.2"
youtube_dl = "^2021.6.6"
Flask = "^2.0.1"
pafy = "^0.5.5"
replit = "^3.2.4"
PyNaCl = "^1.4.0"
spotipy = "^2.19.0"
fuzzysearch = "^0.7.3"
plyer = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
